# gfdlvitals

./: .gitignore  .pylintrc  .readthedocs.yml  README.md  conda.yml  gfdlvitals.py  pyproject.toml  setup.cfg  setup.py  vitals.csh  vitals_refineDiag.csh
.github/workflows/: codeql.yml  python-publish.yml  test.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  contribute.rst  db2nc.rst  generate_diags.rst  gfdlvitals.averagers.rst  gfdlvitals.diags.rst  gfdlvitals.models.rst  gfdlvitals.rst  gfdlvitals.util.rst  howto.rst  index.rst  install.rst  modules.rst  overview.rst  plotting.rst  sqlite_format.rst  testing.rst  virtualenv.rst  vitals_data_frame.rst
gfdlvitals/: __init__.py  cli.py  cli_db2nc.py  cli_plotdb.py  extensions.py  plot.py  sample.py  version.py
gfdlvitals/averagers/: __init__.py  cubesphere.py  ice.py  land_lm3.py  land_lm4.py  latlon.py  tripolar.py
gfdlvitals/diags/: __init__.py  acc.py  amoc.py  fms.py  m6toolbox.py
gfdlvitals/models/: CM4.py  ESM2.py  ESM4.py  OM4.py  __init__.py  generic.py
gfdlvitals/resources/: LM3_variable_dictionary.pkl  historical.db  picontrol.db
gfdlvitals/util/: __init__.py  average.py  extract_ocean_scalar.py  git.py  gmeantools.py  merge.py  netcdf.py  xrtools.py
legacy/: vitals.csh
python/: extract_ocean_scalar.py  global_average_cubesphere.py  global_average_ice.py  global_average_land.py  global_average_tripolar.py  gmeantools.py  merge.py
scripts/: db2nc  gfdlvitals  plotdb
testing/: Makefile
testing/reference/: globalAveAtmos.db.txt  globalAveLand.db.txt  shAveLand.db.txt  shAveOBGC.db.txt  tropicsAveAtmos.db.txt
testing/reference/esm2/: globalAveAtmos.db.txt  globalAveIce.db.txt  globalAveLand.db.txt  globalAveOBGC.db.txt  globalAveOcean.db.txt  nhAveAtmos.db.txt  nhAveIce.db.txt  nhAveLand.db.txt  nhAveOBGC.db.txt  nhAveOcean.db.txt  shAveAtmos.db.txt  shAveIce.db.txt  shAveLand.db.txt  shAveOBGC.db.txt  shAveOcean.db.txt  tropicsAveAtmos.db.txt  tropicsAveLand.db.txt  tropicsAveOBGC.db.txt  tropicsAveOcean.db.txt
testing/reference/esm4/: globalAveAtmos.db.txt  globalAveIce.db.txt  globalAveLand.db.txt  globalAveOBGC.db.txt  globalAveOcean.db.txt  nhAveAtmos.db.txt  nhAveIce.db.txt  nhAveLand.db.txt  nhAveOBGC.db.txt  shAveAtmos.db.txt  shAveIce.db.txt  shAveLand.db.txt  shAveOBGC.db.txt  tropicsAveAtmos.db.txt  tropicsAveLand.db.txt  tropicsAveOBGC.db.txt
tests/: test_basic.py
