[options]
packages = gfdlvitals
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    python-dev
    setuptools >= 41.2  # For pkg_resources
    numpy
    scipy
    pandas
    netCDF4 
    matplotlib >= 3.3.3
    xarray
    cftime <= 1.2.1
    nc-time-axis <= 1.2.0
setup_requires =
    setuptools >= 41.2

[options.package_data]
gfdlvitals =
    resources/LM3_variable_dictionary.pkl
    resources/historical.db
    resources/picontrol.db
    resources/fonts/Roboto/*
    resources/fonts/Roboto_Condensed/*
