[options]
packages = gfdlvitals
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.9
install_requires =
    setuptools
    numpy
    scipy
    h5netcdf
    pandas
    netCDF4 
    matplotlib
    xarray
    cftime
    nc-time-axis
setup_requires =
    setuptools

[options.package_data]
gfdlvitals =
    resources/LM3_variable_dictionary.pkl
    resources/historical.db
    resources/picontrol.db
    resources/fonts/Roboto/*
    resources/fonts/Roboto_Condensed/*
