[metadata]
name = gfdlvitals
description = Tools for calculating scalar diagnostics from GFDL models
url = https://github.com/jkrasting/gfdlvitals
author = John Krasting
author_email = john.krasting@noaa.gov
keywords = climate model analysis scalar diagnostics gfdl AM4 CM4 ESM4 OM4 LM4
classifiers =i
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **gfdlvitals** is a Python package in the public domain
    that provides tools for calculating, storing, and analyzing
    scalar diagnostics from GFDL's CM4-class models. 

    More Information
    ----------------
    - Source code: `<https://github.com/jkrasting/gfdlvitals>`_
    - Documentation: `<https://gfdlvitals.readthedocs.io/en/latest/>`_

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools
    numpy
    scipy
    h5netcdf
    pandas
    netCDF4 
    matplotlib
    xarray
    cftime
    nc-time-axis
scripts = 
    scripts/gfdlvitals
    scripts/db2nc
    scripts/plotdb
setup_requires =
    setuptools

[options.package_data]
gfdlvitals =
    resources/LM3_variable_dictionary.pkl
    resources/historical.db
    resources/picontrol.db
    resources/fonts/Roboto/*
    resources/fonts/Roboto_Condensed/*
